2nd flower commit

--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Poppins:ital,wght@0,300;0,400;0,500;1,200&display=swap"
+        rel="stylesheet">
     <title>Document</title>
-    <!-- <style>
-        .box{
-            height: 300px;
-            width: 300px;
-            background-color: aqua;
-            border-radius: 10rem 10rem 0 0;
-        }
-    </style> -->
 </head>
 <body>
     <!-- !header section -->
@@ -97,7 +94,50 @@
             </div>
         </div>
 
-        <!-- !banner-section -->
+        <!-- !expert section -->
+
+        <section class="sec-bg">
+        <div class="expert">
+            <div class="features-info">
+                <h2 class="features-title">Flower Expert</h2>
+                <p class="features-description">It is a long established fact that a reader will be distracted by the readable <br>
+                    content of a page when looking at its
+                    layout.</p>
+            </div>
+            <div class="service-container">
+                <div class="box">
+                    <img class="icon-img" src="./Flower Asset/ex-1.png" alt="">
+                    <h2 class="box-title">Fin Aly</h2>
+                    <p class="box-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, iure dolor accusamus
+                    </p>
+                    <button class="btn4">Florist</button>
+                </div>
+                <div class="box">
+                    <img class="icon-img" src="./Flower Asset/ex-2.png" alt="">
+                    <h2 class="box-title">Trudo Bin</h2>
+                    <p class="box-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, iure dolor accusamus
+                    </p>
+                    <button class="btn4">Manager</button>
+                </div>
+                <div class="box">
+                    <img class="icon-img" src="./Flower Asset/ex-3.png" alt="">
+                    <h2 class="box-title">Jack </h2>
+                    <p class="box-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, iure dolor accusamus
+                    </p>
+                    <button class="btn4">Florist</button>
+                </div>
+                <div class="box">
+                    <img class="icon-img" src="./Flower Asset/ex-4.png" alt="">
+                    <h2 class="box-title">justy Ann</h2>
+                    <p class="box-des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, iure dolor accusamus
+                    </p>
+                    <button class="btn4">Manager</button>
+                </div>
+            </div>
+        </div>
+        </section>
+
+        <!-- !banner2-section -->
         <section>
             <div class="banner-container2">
                 <div class="banner-info2">
@@ -119,6 +159,7 @@
                 content of a page when looking at its
                 layout.</p>
         </div>
+        
 
         <!-- !insta photo section -->
          <section>
@@ -143,12 +184,12 @@
         <!-- ! latest details section -->
         <section>
             <div class="details-container">
-                <div class="details-info">
-                    <h1 class="lst-title">Get The Latest Deals</h1>
-                    <p class="lst-description">$30 coupon for first shopping</p>
-                    <input class="inputs" type="text">
-                    <button class="btn3">Subscribe</button>
-                </div>
+                    <div class="details-info">
+                        <h1 class="lst-title">Get The Latest Deals</h1>
+                        <p class="lst-description">$30 coupon for first shopping</p>
+                        <input class="inputs" type="text">
+                        <button class="btn3">Subscribe</button>
+                    </div>
             </div>
         </section>
 
